--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
                     </h1>
                 </div><!--//branding-->
                 <div class="tagline">
-                    <p>Blah blah blah blah blah blah blah blah blah</p>
+                    <p>Creating PWA made easy</p>
                     <p>Designed with <i class="fas fa-heart"></i> for developers</p>
                 </div><!--//tagline-->
                 <div class="social-container">
@@ -37,9 +37,9 @@ layout: default
 
         <section class="cards-section text-center">
             <div class="container">
-                <h2 class="title">Getting started is easy!</h2>
+                <h2 class="title">What is locomote.sh?</h2>
                 <div class="intro">
-                    <p>Blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+                    <p>Locomote is a headless content management system (CMS) used to build and publish websites and progressive web apps (PWAs) with offline capabilities.</p>
                     <div class="cta-container">
                         <a class="btn btn-primary btn-cta" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/prettydocs-free-bootstrap-theme-for-developers-and-startups/" target="_blank"><i class="fas fa-cloud-download-alt"></i> Download Now</a>
                     </div><!--//cta-container-->
@@ -52,7 +52,7 @@ layout: default
                             </div><!--//icon-holder-->
                             <h3 class="title">Getting Started</h3>
                             <p class="intro">Tutorials and demo projects</p>
-                            <a class="link" href="start.html"><span></span></a>
+                            <a class="link" href="introduction.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-pink item-2 col-lg-4 col-6">
@@ -60,9 +60,9 @@ layout: default
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Concepts</h3>
-                            <p class="intro">Ideas and background</p>
-                            <a class="link" href="concepts.html"><span></span></a>
+                            <h3 class="title">Content Management</h3>
+                            <p class="intro">Headless CMS</p>
+                            <a class="link" href="content-management.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-blue col-lg-4 col-6">
@@ -70,9 +70,9 @@ layout: default
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_datareport_alt"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">SDK and APIs</h3>
+                            <h3 class="title">Client SDK</h3>
                             <p class="intro">Technical documentation for developers</p>
-                            <a class="link" href="developers.html"><span></span></a>
+                            <a class="link" href="client-sdk.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-purple col-lg-4 col-6">
@@ -82,7 +82,7 @@ layout: default
                             </div><!--//icon-holder-->
                             <h3 class="title">FAQs</h3>
                             <p class="intro">Frequently asked questions</p>
-                            <a class="link" href="faqs.html"><span></span></a>
+                            <a class="link" href="faq.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-primary col-lg-4 col-6">
@@ -90,9 +90,9 @@ layout: default
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_genius"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Examples</h3>
-                            <p class="intro">Example websites and progressive web apps</p>
-                            <a class="link" href="examples.html"><span></span></a>
+                            <h3 class="title">Tutorials</h3>
+                            <p class="intro">Tutorials and samples</p>
+                            <a class="link" href="tutorials-and-samples.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-orange col-lg-4 col-6">
