--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@ layout: default
                     </h1>
                 </div><!--//branding-->
                 <div class="tagline">
-                    <p>Creating PWA made easy</p>
+                    <p>PWA made easy</p>
                     <p>Designed with <i class="fas fa-heart"></i> for developers</p>
                 </div><!--//tagline-->
                 <div class="social-container">
 	                <!-- Replace with your Github Button -->
-	                <div class="github-btn mb-2">
+	                <!-- <div class="github-btn mb-2">
 						<a class="github-button" href="https://github.com/xriley/PrettyDocs-Theme" data-size="large" aria-label="Star xriley/PrettyDocs-Theme on GitHub">Star</a>
                         <a class="github-button" href="https://github.com/xriley" data-size="large" aria-label="Follow @xriley on GitHub">Follow @xriley</a>
-	                </div>
+	                </div> -->
 	                <!-- Replace with your Twitter Button -->
-                    <div class="twitter-tweet">
+                    <!-- <div class="twitter-tweet">
                         <a href="https://twitter.com/share" class="twitter-share-button" data-text="PrettyDocs - A FREE #Bootstrap theme for project documentations #Responsive" data-via="3rdwave_themes">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                     </div><!--//tweet-->
@@ -41,7 +41,7 @@ layout: default
                 <div class="intro">
                     <p>Locomote is a headless content management system (CMS) used to build and publish websites and progressive web apps (PWAs) with offline capabilities.</p>
                     <div class="cta-container">
-                        <a class="btn btn-primary btn-cta" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/prettydocs-free-bootstrap-theme-for-developers-and-startups/" target="_blank"><i class="fas fa-cloud-download-alt"></i> Download Now</a>
+                        <!-- <a class="btn btn-primary btn-cta" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/prettydocs-free-bootstrap-theme-for-developers-and-startups/" target="_blank"><i class="fas fa-cloud-download-alt"></i> Download Now</a> -->
                     </div><!--//cta-container-->
                 </div><!--//intro-->
                 <div id="cards-wrapper" class="cards-wrapper row">
